// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanForm should render 1`] = `
<form
  className="loan-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="5SS Reno Loan"
    />
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Start date"
      name="startDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2014-09-10"
    />
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="End date"
      name="endDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2039-09-10"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Principal amount"
      min="0"
      name="principal"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="500000"
    />
    <SelectField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Compounding Period"
      name="compoundingPeriod"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="daily"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Length in years"
      min="0"
      name="lengthInYears"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="25"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Establishment fees"
      min="0"
      name="establishmentFees"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="1500"
    />
    <SelectField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Repayment type"
      name="repaymentType"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="principalAndInterest"
    />
  </fieldset>
  <fieldset>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;

exports[`LoanForm should render 2`] = `
<form
  className="loan-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="Briggs Primary"
    />
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Start date"
      name="startDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2014-05-10"
    />
    <DateField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="End date"
      name="endDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2029-05-10"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Principal amount"
      min="0"
      name="principal"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="150000"
    />
    <SelectField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Compounding Period"
      name="compoundingPeriod"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="monthly"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Length in years"
      min="0"
      name="lengthInYears"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="30"
    />
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Establishment fees"
      min="0"
      name="establishmentFees"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
    />
    <SelectField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Repayment type"
      name="repaymentType"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="interestOnly"
    />
  </fieldset>
  <fieldset>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;
